--- a/2035-logica-programacion-2-Aula4/index.html
+++ b/2035-logica-programacion-2-Aula4/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="es-ar">
 
 <head>
     <meta charset="UTF-8">
@@ -21,7 +21,7 @@
                     <h1></h1>
                     <p class="texto__parrafo"></p>
                 </div>
-                <input type="number" id="valorUsuario" min="1" max="${parseInt(numeroMaximo)};" class="container__input">
+                <input type="number" id="valorUsuario" min="1" class="container__input">
                 <div class="chute container__botones">
                     <button onclick="verificarIntento();" class="container__boton" id="intentar">Intentar</button>
                     <button onclick="reiniciarJuego();" class="container__boton" id="reiniciar" disabled>Nuevo juego</button>
